<resources>
    <string name="app_name">VipTraining</string>
    <string name="todos_podem_treinar">Todos Podem Treinar!</string>
    <string name="vip_training">VipTraining</string>
    <string name="objetivo">Qual é o seu objetivo?</string>
    <string name="sub_objetivo">Nós iremos te ajudar a montar os melhores treinos</string>
    <string name="proximo">Próximo</string>
    <string name="entendi">Entendi</string>
    <string name="forma">Melhorar a forma</string>
    <string name="sub_forma">Possuímos o treino certo para ajudar a melhorar a forma física em pouco tempo.</string>
    <string name="otimize">Otimize seu Treino</string>
    <string name="sub_otimize">Temos diversos tipos de treino que te ajudam a gerenciar seus exercícios de uma forma dinâmica.</string>
    <string name="metas">Suas Metas</string>
    <string name="sub_metas">Podemos ajudá-lo a determinar seus objetivos e acompanhar suas metas.</string>
    <string name="cabecalho_login">Olá,</string>
    <string name="descricao_login">Seja Bem Vindo!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Esqueceu a sua Senha?</string>
    <string name="ou">Ou</string>
    <string name="login">Login</string>
    <string name="account">Ainda não tem uma conta?</string>
    <string name="registre">Registre-se</string>
    <string name="cadastre">Cadastre-se</string>
    <string name="account_create">Criando uma Conta</string>
    <string name="conta">Já possui uma conta ?</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="confirme_a_senha">Confirme a Senha</string>
    <string name="senha">Senha</string>
    <string name="adicionar_treino">Adicionar Treino</string>
    <string name="date">Qua, 27 Jul 2022.</string>
    <string name="salvar">Salvar</string>
    <string name="detalhe_do_treinamento">Detalhe do Treinamento</string>
    <string name="treinamento">Escolha o Treinamento</string>
    <string name="exercicios">Exercícios</string>
    <string name="imagens_do_treino">Imagens do Treino</string>
    <string name="observation">Minhas Observações</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minha_meta">Minha meta</string>
    <string name="emagrecer">Abaixo nós apresentamos algumas opções de treino de musculação para emagrecer que você poderá seguir.</string>
    <string name="title_activity_choose_training">ChooseTrainingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="incluir">Incluir</string>
    <string name="option">Opção 01</string>
    <string name="treinos_disponiveis">Treinos Disponíveis</string>
    <string name="adicionar_exercicio">Adicionar Exercício</string>
    <string name="tipos_de_exercicios">Tipos de Exercicios</string>
    <string name="meus_treinos">Meus Treinos</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="esqueceu_a_sua_senha">Esqueceu a sua senha?</string>
    <string name="detlalhe_forget_password">Digite o seu e-mail cadastrado e em breve enviaremos um link para resetar a sua senha.</string>
    <string name="procurar_treinos">Procurar Treinos</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="cancelar">Cancelar</string>
    <string name="apagar">Apagar</string>
    <string name="profile">Profile</string>
    <string name="complete_o_seu_perfil">Complete o seu perfil</string>
    <string name="dia_de_aniversario">Dia de Aniversário</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="perfil">Perfil</string>
    <string name="adicionar">Adicionar</string>
    <string name="procurar">Procurar</string>
    <string name="treinos">Treinos</string>
    <string name="home">Home</string>
    <string name="definicao">Exercicios que ajudam na definição dos seus músculos</string>
    <string name="nivel">Nível Avançado*</string>
    <string name="treinar">Começar a Treinar</string>
    <string name="aniversário">Data de Aniversário</string>
    <string name="edite_profile">Editar Perfil</string>
    <string name="ola">Olá,</string>
    <string name="completar_perfil">Complete o seu Perfil, isso nos ajudará a te conhecer melhor e assim poderemos te indicar super treinos.</string>
    <string name="salve_img">Salve uma Imagem do Treino:</string>
    <string name="option1">01 - Caminhada Leve por 40min</string>
    <string name="option2">02 - Caminhada e Corrida Leve por 40min</string>
    <string name="option3">03 - Pedalada Leve por 50min</string>
    <string name="option4">04 - Caminhada Leve na Esteira por 40min</string>
    <string name="option5">...</string>
    <string name="info_perfil">Complete o seu Perfil, isso nos ajudará a te conhecer melhor e assim poderemos te indicar super treinos.</string>
    <string name="editar_treino">Editar Treino</string>
    <string name="senha1">Senha</string>
    <string name="seja_bem_vindo">Seja Bem Vindo,</string>
    <string name="option6">Deseja realmente apagar os dados desse Treino?</string>
    <string name="continue1">Continue</string>
    <string name="todo">TODO</string>
    <string name="ganhar_musculos">Ganhar Musculos</string>
    <string-array name="training_types">
        <item>Perda de Peso</item>
        <item>Melhorar a forma Física</item>
        <item>Sair do Sedentarismo</item>
        <item>Ganhar Músculos</item>
    </string-array>
</resources>