<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.createuser.CreateUserAccountActivity">

    <TextView
        android:id="@+id/text_subtitle_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:text="@string/account_create"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/nome"
        android:imeOptions="actionNext"
        android:textColorHint="@color/grey_dark"
        app:boxBackgroundColor="@color/sand"
        app:boxStrokeColor="@color/blue_light"
        app:endIconMode="clear_text"
        app:endIconTint="@color/grey_dark"
        app:hintTextColor="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle_account"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
        app:startIconDrawable="@drawable/icon_account"
        app:startIconTint="@color/grey_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/grey_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:textColorHint="@color/grey_dark"
        app:boxBackgroundColor="@color/sand"
        app:boxStrokeColor="@color/blue_light"
        app:endIconMode="clear_text"
        app:endIconTint="@color/grey_dark"
        app:hintTextColor="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_name"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
        app:startIconDrawable="@drawable/icon_email"
        app:startIconTint="@color/grey_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/grey_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/senha"
        android:imeOptions="actionNext"
        android:textColorHint="@color/grey_dark"
        app:boxBackgroundColor="@color/sand"
        app:boxStrokeColor="@color/blue_light"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey_dark"
        app:hintTextColor="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_email"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
        app:startIconDrawable="@drawable/icon_lock"
        app:startIconTint="@color/grey_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@color/grey_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/confirme_a_senha"
        android:imeOptions="actionNext"
        android:textColorHint="@color/grey_dark"
        app:boxBackgroundColor="@color/sand"
        app:boxStrokeColor="@color/blue_light"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey_dark"
        app:hintTextColor="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_password"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
        app:startIconDrawable="@drawable/icon_lock"
        app:startIconTint="@color/grey_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@color/grey_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_accept_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:elevation="3dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_confirm_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_account"
        style="@style/Button_Style"
        android:layout_marginBottom="220dp"
        android:text="@string/cadastre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line_or"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/sand2"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_account"
        app:layout_constraintStart_toStartOf="@+id/btn_create_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="-20dp"
        android:background="@color/white"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/line_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_icon_google"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_button_login"
        android:scaleType="fitCenter"
        app:contentPadding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/text_or"
        app:layout_constraintTop_toBottomOf="@+id/line_or"
        app:srcCompat="@drawable/icon_google" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_icon_facebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_button_login"
        android:scaleType="fitCenter"
        app:contentPadding="15dp"
        app:layout_constraintStart_toEndOf="@+id/text_or"
        app:layout_constraintTop_toBottomOf="@+id/line_or"
        app:srcCompat="@drawable/icon_facebook" />

    <TextView
        android:id="@+id/text_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:elevation="3dp"
        android:text="@string/conta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:elevation="3dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/violet"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_new_account" />

    <FrameLayout
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:elevation="3dp"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
