<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="Widget.Design.BottomSheet.Modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:backgroundTint="@color/cinza_d"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialogfragment.ForgotPasswordDialogFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:text="@string/esqueceu_a_sua_senha"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/detlalhe_forget_password"
        android:textColor="@color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:hint="@string/digite_seu_email"
        android:imeOptions="actionNext"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/sand"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
        app:startIconDrawable="@drawable/icon_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password_btn_continue"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="Continue"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

</LinearLayout>
